# askme

./: .gitignore  Cargo.toml  README.md  exampleConfig.yml
locales/: de.toml  de.yml  en.toml  en.yml  es.toml  es.yml  fr.toml  fr.yml  it.toml  it.yml  zh.toml  zh.yml
src/: config.rs  llm.rs  main.rs
src/drivers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
